--- a/wiki/de/TechDraw_ProjectShape.html
+++ b/wiki/de/TechDraw_ProjectShape.html
@@ -80,18 +80,18 @@
 <h3><span class="mw-headline" id="Daten">Daten</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Projection</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Source</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Die zu projizierende Form.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Direction</b><span style="font-size:80%;"> (<code>Vector</code>)</span>: Die Richtung der Projektion. Das ist der Normalvektor auf die Projektionsfl&auml;che.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare scharfe Kanten gezeigt. Beispiel: alle Kanten einer <a href="../Part_Box.html" title="Part Box">Part Box</a>.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Rg1 Line VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare glatte Kanten gezeigt. Beispiel: die Kanten zwischen einer Rundung und den benachbarten Fl&auml;chen.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Rg NLine VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare N&auml;hte gezeigt. Beispiel: die Naht einer 360&deg; zylindrischen Fl&auml;che.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Out Line VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare Konturen (die nicht scharf sind) gezeigt. Beispiel: die Seitenansicht eines <a href="../Part_Cylinder.html" title="Part Cylinder">Part Cylinder</a> hat zwei solche Kanten.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Iso Line VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare Isoparameter gezeigt. Dies funktioniert derzeit nicht.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare scharfe Kanten gezeigt.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Rg1 Line HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare glatte Kanten gezeigt.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Rg NLine HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare N&auml;hte gezeigt.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Out Line HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare Konturen  gezeigt.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten</span><b>Iso Line HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare Isoparameter gezeigt. Dies funktioniert derzeit nicht.</li></ul>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Source</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Die zu projizierende Form.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Direction</b><span style="font-size:80%;"> (<code>Vector</code>)</span>: Die Richtung der Projektion. Das ist der Normalvektor auf die Projektionsfl&auml;che.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare scharfe Kanten gezeigt. Beispiel: alle Kanten einer <a href="../de/Part_Box.html" title="Part Box/de">Part Quader</a>.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Rg1 Line VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare glatte Kanten gezeigt. Beispiel: die Kanten zwischen einer Rundung und den benachbarten Fl&auml;chen.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Rg NLine VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare N&auml;hte gezeigt. Beispiel: die Naht einer 360&deg; zylindrischen Fl&auml;che.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Out Line VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare Konturen (die nicht scharf sind) gezeigt. Beispiel: die Seitenansicht eines <a href="../de/Part_Cylinder.html" title="Part Cylinder/de">Part Zylinder</a> hat zwei solche Kanten.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Iso Line VCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden sichtbare Isoparameter gezeigt. Dies funktioniert derzeit nicht.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare scharfe Kanten gezeigt.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Rg1 Line HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare glatte Kanten gezeigt.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Rg NLine HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare N&auml;hte gezeigt.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Out Line HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare Konturen  gezeigt.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Iso Line HCompound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn <code>true</code>, dann werden unsichtbare Isoparameter gezeigt. Dies funktioniert derzeit nicht.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -136,15 +136,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190814
+Cached time: 20260111190941
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.146 seconds
-Preprocessor visited node count: 868/1000000
-Post&#8208;expand include size: 33026/2097152 bytes
-Template argument size: 11649/2097152 bytes
+CPU time usage: 0.091 seconds
+Real time usage: 0.132 seconds
+Preprocessor visited node count: 820/1000000
+Post&#8208;expand include size: 33362/2097152 bytes
+Template argument size: 11937/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -152,19 +152,19 @@ Unstrip post&#8208;expand size: 1467/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.119      1 -total
- 18.06%    9.776     12 Template:PropertyData
- 17.84%    9.656     10 Template:TRUE
- 17.33%    9.378     15 Template:Variable
- 13.04%    7.056      1 Template:TechDraw_Tools_navi/de
- 10.40%    5.630      3 Template:PropertyData/de
-  9.01%    4.874      1 Template:TitleProperty
-  7.58%    4.103      2 Template:Docnav/de
-  7.24%    3.917      2 Template:Navigation_menu_2
-  7.12%    3.855      1 Template:GuiCommand/de
+100.00%   46.718      1 -total
+ 27.70%   12.940     15 Template:PropertyData/de
+ 18.72%    8.746     15 Template:Variable
+ 18.26%    8.529      1 Template:TechDraw_Tools_navi/de
+ 10.12%    4.728      2 Template:Docnav/de
+  9.67%    4.518      1 Template:TitleProperty
+  9.48%    4.430      1 Template:GuiCommand/de
+  9.06%    4.234      2 Template:Navigation_menu_2
+  6.84%    3.195     12 Template:Incode
+  6.73%    3.144      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190813 and revision id 1735787. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190941 and revision id 1735792. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
