--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -156,9 +156,7 @@
 </p>
 <h3><span id="Ma.C3.9Fe_formatieren.2Forganisieren"></span><span class="mw-headline" id="Ma&szlig;e_formatieren/organisieren">Ma&szlig;e formatieren/organisieren</span></h3>
 <ul><li><span id="TechDraw_ExtensionCreateChainDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/de">Horizontale Ma&szlig;kette</a>: Erstellt ein Abfolge horizontal fluchtender Ma&szlig;e.</span></li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/de">Vertikale Ma&szlig;kette erstellen</a>: Erstellt ein Abfolge vertikal fluchtender Ma&szlig;e.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/de">Vertikale Ma&szlig;kette</a>: Erstellt ein Abfolge vertikal fluchtender Ma&szlig;e.</li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueChainDimension.svg&amp;filetimestamp=20240707201902&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/de">Schr&auml;ge Ma&szlig;kette erstellen</a>: Erstellt ein Abfolge schr&auml;ger fluchtender Ma&szlig;e.</li></ul></dd></dl>
 </div>
@@ -335,13 +333,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190942
+Cached time: 20260111190959
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.251 seconds
-Real time usage: 0.300 seconds
-Preprocessor visited node count: 880/1000000
+CPU time usage: 0.306 seconds
+Real time usage: 0.905 seconds
+Preprocessor visited node count: 879/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -351,18 +349,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.520      1 -total
- 29.90%    4.940      1 Template:TechDraw_Tools_navi/de
- 19.74%    3.261      2 Template:Navigation_menu_2
- 11.67%    1.928      1 Template:Userdocnavi/de
- 11.59%    1.915      2 Template:Docnav/de
- 11.58%    1.913     25 Template:Version/de
- 10.79%    1.783      5 Template:VersionPlus/de
-  7.64%    1.263      1 Template:TOCright
-  5.48%    0.906      1 Template:KEY
+100.00%   70.099      1 -total
+ 33.55%   23.518      1 Template:TechDraw_Tools_navi/de
+ 23.53%   16.495      2 Template:Navigation_menu_2
+ 13.97%    9.790      2 Template:Docnav/de
+ 12.33%    8.644     25 Template:Version/de
+ 11.27%    7.902      5 Template:VersionPlus/de
+  5.87%    4.118      1 Template:KEY
+  5.84%    4.094      1 Template:Userdocnavi/de
+  2.82%    1.977      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190941 and revision id 1735793. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190958 and revision id 1735795. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
