--- a/wiki/de/TechDraw_DecorateLine.html
+++ b/wiki/de/TechDraw_DecorateLine.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw DecorateLine/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+DecorateLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_DecorateLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw DecorateLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Apparence des lignes (60% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Aspetto delle linee (60% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Zmie&#324; wygl&#261;d linii (60% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Zmie&#324; wygl&#261;d linii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1048;&#1079;&#1084;&#1077;&#1085;&#1080;&#1090;&#1100; &#1074;&#1085;&#1077;&#1096;&#1085;&#1080;&#1081; &#1074;&#1080;&#1076; &#1083;&#1080;&#1085;&#1080;&#1081;" (30% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49440;&#44984;&#48120;&#44592; (60% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/de">2PunkteHilfslinie</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ShowAll.html" title="TechDraw ShowAll/de">AllesAnzeigen</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -86,14 +84,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/de">2PunkteHilfslinie</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ShowAll.html" title="TechDraw ShowAll/de">AllesAnzeigen</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -130,35 +126,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111150010
+Cached time: 20260111191048
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.165 seconds
-Preprocessor visited node count: 335/1000000
-Post&#8208;expand include size: 29664/2097152 bytes
-Template argument size: 10939/2097152 bytes
+CPU time usage: 0.065 seconds
+Real time usage: 0.097 seconds
+Preprocessor visited node count: 333/1000000
+Post&#8208;expand include size: 29754/2097152 bytes
+Template argument size: 10999/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1622/5000000 bytes
+Unstrip post&#8208;expand size: 1629/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.851      1 -total
- 27.16%    8.379      1 Template:TechDraw_Tools_navi/de
- 14.30%    4.412      2 Template:Navigation_menu_2
- 11.84%    3.654      1 Template:GuiCommand/de
- 11.67%    3.600      1 Template:Version/de
- 11.66%    3.597      2 Template:Caption
- 11.63%    3.587      2 Template:Docnav/de
- 10.29%    3.176      1 Template:Userdocnavi/de
-  6.35%    1.959      6 Template:Button
-  6.15%    1.897      1 Template:MenuCommand
+100.00%   20.449      1 -total
+ 29.70%    6.073      1 Template:TechDraw_Tools_navi/de
+ 15.71%    3.212      2 Template:Navigation_menu_2
+ 15.35%    3.139      2 Template:Docnav/de
+ 12.53%    2.562      1 Template:GuiCommand/de
+  8.74%    1.787      6 Template:Button
+  8.36%    1.710      1 Template:MenuCommand
+  8.01%    1.637      1 Template:Userdocnavi/de
+  7.99%    1.635      1 Template:Version/de
+  5.53%    1.131      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177756-0!canonical and timestamp 20260111150009 and revision id 1734506. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177756-0!canonical and timestamp 20260111191047 and revision id 1735799. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
